crates/solidity-v2/testing/snapshots/cst_output/MappingType/stray_delimiter/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected CloseBracket. One of AtKeyword_Unreserved, CloseParen, ErrorKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, LayoutKeyword_Unreserved, OpenBracket, RevertKeyword_Unreserved, TransientKeyword_Unreserved was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/MappingType/stray_delimiter/input.sol:3:26 ]
   │
 3 │ mapping(string => bytes32] arg)
   │                          ┬  
   │                          ╰── Error occurred here.
───╯
